// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx hydrate transform > should work with CSS-in-JS in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, patchClassHydrate as _patchClassHydrate$, memoEffect as _memoEffect$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div data-styled><!></div>");
const StyledComponent = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _memoEffect$(_p$ => {
    var _v$ = __props.className;
    _v$ !== _p$.c0 && _patchClassHydrate$(_root$, _p$.c0, _p$.c0 = _v$);
    return _p$;
  }, {
    c0: undefined
  });
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StyledComponent, {
  className: "generated-class",
  get children() {
    return ["Styled Content"];
  }
});"
`;

exports[`jsx hydrate transform > should work with async data in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div><!></div>");
const AsyncComponent = async __props => {
  const result = await __props.data;
  return (() => {
    const _root$ = _t$();
    const _n$ = _child$(_root$);
    _insert$(_root$, () => result, _n$);
    return _root$;
  })();
};
const element = _createComponent$(AsyncComponent, {
  get data() {
    return Promise.resolve('async content');
  }
});"
`;

exports[`jsx hydrate transform > should work with bind api 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, bindElement as _bindElement$ } from "essor";
const _t$ = _getRenderedElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const value = 1;
(() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _bindElement$(_n$, "value", () => value, _v$ => value = _v$);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > should work with comment in JSX 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, bindElement as _bindElement$ } from "essor";
const _t$ = _getRenderedElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const value = 1;
(() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _bindElement$(_n$, "value", () => value, _v$ => value = _v$);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > should work with conditional rendering in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, next as _next$, insert as _insert$ } from "essor";
const _t$4 = _getRenderedElement$("<span>False</span>");
const _t$3 = _getRenderedElement$("<span>True</span>");
const _t$2 = _getRenderedElement$("<p>Visible Content</p>");
const _t$ = _getRenderedElement$("<div><!><!></div>");
const isVisible = true;
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  const _n$2 = _next$(_n$, 1);
  _insert$(_root$, () => isVisible && _t$2(), _n$);
  _insert$(_root$, () => isVisible ? _t$3() : _t$4(), _n$2);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > should work with context in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div data-theme=\\"dark\\">Themed Content</div>");
const ThemeContext = {
  Provider: ({
    value,
    children
  }) => children
};
const element = _createComponent$(ThemeContext.Provider, {
  value: "dark",
  get children() {
    return [_t$()];
  }
});"
`;

exports[`jsx hydrate transform > should work with data fetching in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div data-ssr-data><!></div>");
const DataComponent = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => JSON.stringify(__props.data), _n$);
  return _root$;
})();
const element = _createComponent$(DataComponent, {
  get data() {
    return {
      key: 'value'
    };
  }
});"
`;

exports[`jsx hydrate transform > should work with error handling in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Error Page</div>");
const _t$ = _getRenderedElement$("<div>Protected Content</div>");
const ErrorBoundary = ({
  fallback,
  children
}) => {
  try {
    return children;
  } catch (error) {
    return fallback;
  }
};
const element = _createComponent$(ErrorBoundary, {
  get fallback() {
    return _t$2();
  },
  get children() {
    return [_t$()];
  }
});"
`;

exports[`jsx hydrate transform > should work with event handlers in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, delegateEvents as _delegateEvents$ } from "essor";
const _t$ = _getRenderedElement$("<button>Click me</button>");
const handleClick = () => console.log('clicked');
const element = (() => {
  const _root$ = _t$();
  _root$["_$click"] = handleClick;
  return _root$;
})();
_delegateEvents$(["click"]);"
`;

exports[`jsx hydrate transform > should work with head management in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$3 = _getRenderedElement$("<meta name=\\"description\\" content=\\"Page description\\"/>");
const _t$2 = _getRenderedElement$("<title>Page Title</title>");
const _t$ = _getRenderedElement$("<head data-ssr><!></head>");
const Head = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(Head, {
  get children() {
    return [_t$2(), _t$3()];
  }
});"
`;

exports[`jsx hydrate transform > should work with hydration attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div data-hydrate=\\"true\\">Hydration Content</div>");
const element = _t$();"
`;

exports[`jsx hydrate transform > should work with list rendering in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$, For as _For$ } from "essor";
const _t$2 = _getRenderedElement$("<li><!></li>");
const _t$ = _getRenderedElement$("<ul><!></ul>");
const items = ['Item 1', 'Item 2', 'Item 3'];
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(_For$, {
    get each() {
      return items;
    },
    children: (item, index) => (() => {
      const _root$2 = _t$2();
      const _n$2 = _child$(_root$2);
      _insert$(_root$2, () => item, _n$2);
      return _root$2;
    })(),
    key: (item, index) => index
  }), _n$);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > should work with nested components and props in hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, nthChild as _nthChild$, next as _next$, insert as _insert$, child as _child$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div><!><!></div>");
const _t$ = _getRenderedElement$("<div>Name: <!>, Age: <!></div>");
const Child = __props => (() => {
  const _root$ = _t$();
  const _n$ = _nthChild$(_root$, 1);
  const _n$2 = _next$(_n$, 2);
  _insert$(_root$, () => __props.name, _n$);
  _insert$(_root$, () => __props.age, _n$2);
  return _root$;
})();
const Parent = () => (() => {
  const _root$2 = _t$2();
  const _n$3 = _child$(_root$2);
  const _n$4 = _next$(_n$3, 1);
  _insert$(_root$2, _createComponent$(Child, {
    name: "John",
    age: "25"
  }), _n$3);
  _insert$(_root$2, _createComponent$(Child, {
    name: "Jane",
    age: "23"
  }), _n$4);
  return _root$2;
})();"
`;

exports[`jsx hydrate transform > should work with streaming hydrate 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, patchAttrHydrate as _patchAttrHydrate$, memoEffect as _memoEffect$, createComponent as _createComponent$, For as _For$ } from "essor";
const _t$ = _getRenderedElement$("<div><!></div>");
const StreamingComponent = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(_For$, {
    get each() {
      return __props.chunks;
    },
    children: (chunk, index) => (() => {
      const _root$2 = _t$();
      const _n$2 = _child$(_root$2);
      _memoEffect$(_p$ => {
        var _v$ = index;
        _v$ !== _p$.a0 && _patchAttrHydrate$(_root$2, "data-chunk", _p$.a0, _p$.a0 = _v$);
        return _p$;
      }, {
        a0: undefined
      });
      _insert$(_root$2, () => chunk, _n$2);
      return _root$2;
    })(),
    key: (chunk, index) => index
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingComponent, {
  get chunks() {
    return ['chunk1', 'chunk2'];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and context 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Streaming Context Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-context><!></div>");
const StreamingContext = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(ThemeContext.Provider, {
    get value() {
      return __props.value;
    },
    get children() {
      return [__props.children];
    }
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingContext, {
  value: "dark",
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and custom hooks 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div data-streaming-hook><!></div>");
const useStreamingHook = () => ({
  value: 'streaming'
});
const StreamingHook = () => {
  const {
    value
  } = useStreamingHook();
  return (() => {
    const _root$ = _t$();
    const _n$ = _child$(_root$);
    _insert$(_root$, () => value, _n$);
    return _root$;
  })();
};
const element = _createComponent$(StreamingHook, {});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and data fetching 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Data Content</div>");
const _t$2 = _getRenderedElement$("<div>Loading data...</div>");
const _t$ = _getRenderedElement$("<div data-streaming-data><!></div>");
const StreamingData = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.data ? __props.children : _t$2(), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingData, {
  get data() {
    return {
      key: 'value'
    };
  },
  get children() {
    return [_t$3()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and dynamic imports 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$, Suspense as _Suspense$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Loading...</div>");
const _t$ = _getRenderedElement$("<div data-streaming-dynamic><!></div>");
const StreamingDynamic = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(_Suspense$, {
  get fallback() {
    return _t$2();
  },
  get children() {
    return [_createComponent$(StreamingDynamic, {
      get children() {
        return [import('./Component')];
      }
    })];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and error boundaries 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Error occurred!</div>");
const _t$2 = _getRenderedElement$("<div>Protected Streaming Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-error><!></div>");
const StreamingErrorBoundary = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(ErrorBoundary, {
    get fallback() {
      return __props.fallback;
    },
    get children() {
      return [__props.children];
    }
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingErrorBoundary, {
  get fallback() {
    return _t$3();
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and error handling 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, nthChild as _nthChild$, createComponent as _createComponent$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Streaming Content</div>");
const _t$2 = _getRenderedElement$("<div>Error: <!></div>");
const _t$ = _getRenderedElement$("<div data-streaming-error><!></div>");
const StreamingError = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.error ? (() => {
    const _root$2 = _t$2();
    const _n$2 = _nthChild$(_root$2, 1);
    _insert$(_root$2, () => __props.error.message, _n$2);
    return _root$2;
  })() : __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StreamingError, {
  error: null,
  get children() {
    return [_t$3()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and forwardRef 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Streaming Forward Ref Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-forward><!></div>");
const StreamingForwardRef = React.forwardRef((props, ref) => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  (_r$ => typeof _r$ === "function" ? _r$(_root$) : _r$.value = _root$)(ref);
  _insert$(_root$, () => props.children, _n$);
  return _root$;
})());
const element = _createComponent$(StreamingForwardRef, {
  get ref() {
    return React.createRef();
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and hydration 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div data-hydrate=\\"true\\">Hydration Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-hydration><!></div>");
const StreamingHydration = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StreamingHydration, {
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and lazy loading 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$, Suspense as _Suspense$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Loading...</div>");
const _t$ = _getRenderedElement$("<div data-streaming-lazy><!></div>");
const StreamingLazy = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
StreamingLazy._lazy = true;
const element = _createComponent$(_Suspense$, {
  get fallback() {
    return _t$2();
  },
  get children() {
    return [_createComponent$(StreamingLazy, {
      get children() {
        return ["Lazy Content"];
      }
    })];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and loading states 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Loaded Content</div>");
const _t$2 = _getRenderedElement$("<div>Loading...</div>");
const _t$ = _getRenderedElement$("<div data-streaming-loading><!></div>");
const StreamingLoading = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.isLoading ? _t$2() : __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StreamingLoading, {
  isLoading: false,
  get children() {
    return [_t$3()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and memo 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$ = _getRenderedElement$("<div data-streaming-memo><!></div>");
const StreamingMemo = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, () => __props.value, _n$);
  return _root$;
})();
StreamingMemo._memo = true;
const element = _createComponent$(StreamingMemo, {
  value: "Memo Content"
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and multiple contexts 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Multiple Contexts Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-contexts><!></div>");
const StreamingContexts = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(ThemeContext.Provider, {
    get value() {
      return __props.theme;
    },
    get children() {
      return [_createComponent$(UserContext.Provider, {
        get value() {
          return __props.user;
        },
        get children() {
          return [__props.children];
        }
      })];
    }
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingContexts, {
  theme: "dark",
  get user() {
    return {
      name: 'John'
    };
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and portals 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, patchAttrHydrate as _patchAttrHydrate$, memoEffect as _memoEffect$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Streaming Portal Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-portal><!></div>");
const StreamingPortal = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _memoEffect$(_p$ => {
    var _v$ = __props.target;
    _v$ !== _p$.a0 && _patchAttrHydrate$(_root$, "data-target", _p$.a0, _p$.a0 = _v$);
    return _p$;
  }, {
    a0: undefined
  });
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StreamingPortal, {
  target: "modal",
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and refs 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, insert as _insert$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<div>Streaming Ref Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-ref><!></div>");
const StreamingRef = (__props, ref) => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  (_r$ => typeof _r$ === "function" ? _r$(_root$) : _r$.value = _root$)(ref);
  _insert$(_root$, () => __props.children, _n$);
  return _root$;
})();
const element = _createComponent$(StreamingRef, {
  get ref() {
    return React.createRef();
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and suspense 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, Suspense as _Suspense$, insert as _insert$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Loading...</div>");
const _t$2 = _getRenderedElement$("<div>Streaming Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming><!></div>");
const StreamingSuspense = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(_Suspense$, {
    get fallback() {
      return __props.fallback;
    },
    get children() {
      return [__props.children];
    }
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingSuspense, {
  get fallback() {
    return _t$3();
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > should work with streaming hydrate and suspense boundaries 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, Suspense as _Suspense$, insert as _insert$ } from "essor";
const _t$3 = _getRenderedElement$("<div>Loading...</div>");
const _t$2 = _getRenderedElement$("<div>Suspense Content</div>");
const _t$ = _getRenderedElement$("<div data-streaming-suspense><!></div>");
const StreamingSuspenseBoundary = __props => (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(_Suspense$, {
    get fallback() {
      return __props.fallback;
    },
    get children() {
      return [__props.children];
    }
  }), _n$);
  return _root$;
})();
const element = _createComponent$(StreamingSuspenseBoundary, {
  get fallback() {
    return _t$3();
  },
  get children() {
    return [_t$2()];
  }
});"
`;

exports[`jsx hydrate transform > transforms JSX element with JSX fragment 1`] = `
"import { Fragment as _Fragment$, getRenderedElement as _getRenderedElement$, createComponent as _createComponent$ } from "essor";
const _t$2 = _getRenderedElement$("<p>Paragraph 2</p>");
const _t$ = _getRenderedElement$("<p>Paragraph 1</p>");
const element = _createComponent$(_Fragment$, {
  get children() {
    return [_t$(), _t$2()];
  }
});"
`;

exports[`jsx hydrate transform > transforms JSX element with JSX fragment as children 1`] = `
"import { Fragment as _Fragment$, getRenderedElement as _getRenderedElement$, child as _child$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$3 = _getRenderedElement$("<p>Paragraph 2</p>");
const _t$2 = _getRenderedElement$("<p>Paragraph 1</p>");
const _t$ = _getRenderedElement$("<div><!></div>");
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  _insert$(_root$, _createComponent$(_Fragment$, {
    get children() {
      return [_t$2(), _t$3()];
    }
  }), _n$);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with SVG tags 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<svg><circle cx=\\"50\\" cy=\\"50\\" r=\\"40\\" stroke=\\"black\\" stroke-width=\\"3\\" fill=\\"red\\"></circle></svg>");
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div class=\\"myClass\\" id=\\"myId\\">Hello, World!</div>");
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with boolean attribute 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<input disabled/>");
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with children 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div><p>Paragraph 1</p><p>Paragraph 2</p></div>");
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with class and style attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div class=\\"myClass\\" style=\\"color:red;font-size:16px\\">Hello, World!</div>");
const hasClass = true;
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with conditional attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div class=\\"myClass\\">Hello, World!</div>");
const hasClass = true;
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with dynamic expressions 1`] = `
"import { getRenderedElement as _getRenderedElement$, nthChild as _nthChild$, insert as _insert$ } from "essor";
const _t$ = _getRenderedElement$("<div>Hello, <!>!</div>");
const name = 'John';
const element = (() => {
  const _root$ = _t$();
  const _n$ = _nthChild$(_root$, 1);
  _insert$(_root$, () => name, _n$);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with function components 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, next as _next$, createComponent as _createComponent$, insert as _insert$ } from "essor";
const _t$ = _getRenderedElement$("<div><!><!></div>");
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  const _n$2 = _next$(_n$, 1);
  _insert$(_root$, _createComponent$(MyComponent, {
    text: "Component 1"
  }), _n$);
  _insert$(_root$, _createComponent$(MyComponent, {
    text: "Component 2"
  }), _n$2);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with nested expressions and children 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, next as _next$, insert as _insert$, nthChild as _nthChild$, patchAttrHydrate as _patchAttrHydrate$, memoEffect as _memoEffect$ } from "essor";
const _t$2 = _getRenderedElement$("<li>Item <!></li>");
const _t$ = _getRenderedElement$("<div><p><!>'s Profile</p><ul><!></ul></div>");
const name = 'John';
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  const _n$2 = _child$(_n$);
  const _n$3 = _next$(_n$, 1);
  const _n$4 = _child$(_n$3);
  _insert$(_n$, () => name, _n$2);
  _insert$(_n$3, () => Array.from({
    length: 3
  }, (_, i) => (() => {
    const _root$2 = _t$2();
    const _n$5 = _nthChild$(_root$2, 1);
    _memoEffect$(_p$ => {
      var _v$ = i;
      _v$ !== _p$.a0 && _patchAttrHydrate$(_root$2, "key", _p$.a0, _p$.a0 = _v$);
      return _p$;
    }, {
      a0: undefined
    });
    _insert$(_root$2, () => i + 1, _n$5);
    return _root$2;
  })()), _n$4);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with null and undefined attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$, patchAttrHydrate as _patchAttrHydrate$, patchClassHydrate as _patchClassHydrate$ } from "essor";
const _t$ = _getRenderedElement$("<div>Hello, World!</div>");
const element = (() => {
  const _root$ = _t$();
  _patchAttrHydrate$(_root$, "id", null);
  _patchClassHydrate$(_root$, undefined);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with null and undefined children 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, next as _next$, insert as _insert$ } from "essor";
const _t$ = _getRenderedElement$("<div><!><p>Paragraph 1</p><!><!><p>Paragraph 2</p></div>");
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  const _n$2 = _next$(_n$, 2);
  const _n$3 = _next$(_n$2, 1);
  _insert$(_root$, () => null, _n$);
  _insert$(_root$, () => undefined, _n$2);
  _insert$(_root$, () => false, _n$3);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with null and undefined in expressions 1`] = `
"import { getRenderedElement as _getRenderedElement$, child as _child$, next as _next$, insert as _insert$ } from "essor";
const _t$ = _getRenderedElement$("<div><p><!>'s Profile</p><!><p>Paragraph 2</p></div>");
const name = null;
const element = (() => {
  const _root$ = _t$();
  const _n$ = _child$(_root$);
  const _n$2 = _child$(_n$);
  const _n$3 = _next$(_n$, 1);
  _insert$(_n$, () => name, _n$2);
  _insert$(_root$, () => undefined, _n$3);
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with self-closing tags 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div><img src=\\"image.jpg\\" alt=\\"Image 1\\"/><img src=\\"image.jpg\\" alt=\\"Image 2\\"/></div>");
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms JSX element with spread attributes 1`] = `
"import { getRenderedElement as _getRenderedElement$, patchAttrHydrate as _patchAttrHydrate$, memoEffect as _memoEffect$ } from "essor";
const _t$ = _getRenderedElement$("<div>Hello, World!</div>");
const props = {
  id: 'myId',
  class: 'myClass'
};
const element = (() => {
  const _root$ = _t$();
  _memoEffect$(_p$ => {
    var _v$ = props;
    _v$ !== _p$.sp0 && _patchAttrHydrate$(_root$, "_$spread$", _p$.sp0, _p$.sp0 = _v$);
    return _p$;
  }, {
    sp0: undefined
  });
  return _root$;
})();"
`;

exports[`jsx hydrate transform > transforms JSX element with style attribute 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div style=\\"color:red;font-size:16px\\">Hello, World!</div>");
const style = {
  color: 'red',
  fontSize: '16px'
};
const element = _t$();"
`;

exports[`jsx hydrate transform > transforms simple JSX element 1`] = `
"import { getRenderedElement as _getRenderedElement$ } from "essor";
const _t$ = _getRenderedElement$("<div>Hello, World!</div>");
const element = _t$();"
`;
